--- a/public/frontend/css/shop.css
+++ b/public/frontend/css/shop.css
@@ -1215,9 +1215,9 @@ ul.footer_list_icons.single_in li a:hover {
 	line-height: 2sem;
 }
 
-.bootstrap-tab-text-grid:nth-child(2) {
+/*.bootstrap-tab-text-grid:nth-child(2) {
 	margin: 0.5em 0 0;
-}
+}*/
 
 .add-review form {
 	margin: 2em 0 0;
