--- a/public/css/kitchen.css
+++ b/public/css/kitchen.css
@@ -6,7 +6,7 @@
     border-radius: 4px;
 }
 .side-view{
-    margin-top: 7em;
+    margin-top: 3em;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -31,7 +31,15 @@
 
     .side-view{
         margin-top: 1em;
-    }     
+    }
+    .product-googles-info {
+        padding: 4px;
+    }   
+
+    .container-fluid {
+        padding-right: 5px;
+        padding-left: 5px;
+    }  
 }
 .dropdown-menu {  
 	top: 20px;
