--- a/public/frontend/css/flexslider.css
+++ b/public/frontend/css/flexslider.css
@@ -200,7 +200,7 @@ html[xmlns] .flexslider .slides {
 }
 .flex-control-thumbs img {
   width: 100%;
-  height: auto;
+  height: 65px;
   display: block;
   opacity: .7;
   cursor: pointer;
