--- a/public/css/kitchen.css
+++ b/public/css/kitchen.css
@@ -8,6 +8,9 @@
 .side-view{
     margin-top: 3em;
 }
+.small-tag{
+    font-size: 13px;
+}
 
 @media (min-width: 320px) and (max-width: 480px) {
     #manage_qty{
